# try-parcel

./: .editorconfig  .env  .gitignore  Cargo.toml  Justfile  README.md  package.json  schema.md  tsconfig.json
etc/: gen_cert.sh  localhost.crt  localhost.key
frontend/: index.html  package.json  tsconfig.json  tslint.json
frontend/src/: App.test.tsx  App.tsx  api.ts  config.ts  global.d.ts  global.ts  index.ts  prelude.ts  setupTests.ts  store.ts
frontend/src/actions/: fragments.spec.ts  fragments.ts  schemas.spec.ts  schemas.ts  texts.test.ts  texts.ts
frontend/src/components/: CreateText.spec.tsx  CreateText.tsx  EditText.tsx  Form.tsx  Reader.spec.tsx  Reader.tsx  SchemaEditor.test.tsx  SchemaEditor.tsx  TextForm.test.tsx  TextForm.tsx  TextInput.tsx  Texts.test.tsx  Texts.tsx
frontend/src/reducers/: fragments.ts  texts.ts
frontend/src/rpc/: yacchauyo_pb.d.ts  yacchauyo_pb.js  yacchauyo_pb_service.ts
gql-proxy/: main.js  package.json
gql-server/: Justfile  package.json  server.js  yacchauyo.proto  yacchauyo.proto-resolvers.js  yacchauyo.proto-type-defs.js  yacchauyo.proto.out
less/: index.html  package.json  tsconfig.json
less/src/: App.tsx  index.ts  prelude.ts  types.ts
migrations/2018-01-26-232707_create_texts/: down.sql  up.sql
migrations/2018-02-10-132458_add_value_to_fragments/: down.sql  up.sql
migrations/2018-02-25-074131_one_schema_per_text/: down.sql  up.sql
proto/: yacchauyo.proto
scripts/: ConfirmModal.tsx  SchemaEditor.test.tsx  SchemaEditor.tsx  TextForm.tsx  index.tsx  setupTests.ts
src/: config.rs  db_schema.rs  error.rs  lib.rs  main.rs  server.rs  test_utils.rs  utils.rs
src/gql/: mod.rs
src/models/: fragments.rs  mod.rs  schemas.rs  texts.rs
src/rpc/: mod.rs  server.rs  yacchauyo.rs  yacchauyo_grpc.rs
src/web/: mod.rs  shared.rs  start.rs  texts.rs
templates/: askama.html  base.html  base.html.hbs  index.html  index.html.hbs
templates/t/: edit.html  new.html  new.html.hbs  show.html
tests/: endpoints.rs
(+8 files in other folders)
