[package]
name = "yacchauyo"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
chrono = "*"
configure = "*"
dotenv = "*"
failure = "0.1"
futures = "*"
grpcio = "=0.2"
protobuf = "*"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
r2d2 = "*"
uuid = { version = "*", features = ["v4"] }
rocket_contrib = { version = "0.3.6", features = ["handlebars_templates"] }
handlebars = "0.30.1"
serde_json = "1.0.9"

[dependencies.diesel]
version = "1.1"
features = ["chrono", "postgres", "r2d2", "uuid"]
