[package]
name = "yacchauyo"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
configure = "*"
dotenv = "*"
failure = "0.1"
futures = "*"
grpcio = "=0.2"
protobuf = "*"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
r2d2 = "*"
uuid = { version = "*", features = ["v4", "serde"] }
serde_json = "1.0.9"
askama = { git = "https://github.com/djc/askama", features = ["with-rocket"] }
rocket_contrib = "0.3"
structopt = "0.2.2"
juniper = "0.9.2"
juniper_rocket = "*"

[dependencies.diesel]
version = "1.1"
features = ["chrono", "postgres", "r2d2", "uuid"]

[build-dependencies]
askama = { git = "https://github.com/djc/askama" }
